change filter texts

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                 ];
 
                 const texts = {
-                    'map': 'Visas kartes',
-                    'grenade': 'Visas granātas',
-                    'difficulty': 'Visas grūtības pakāpes',
+                    'map': 'All maps',
+                    'grenade': 'All grenades',
+                    'difficulty': 'All difficulties',
                 };
 
                 const data = [
