--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <div id="app" style="display: flex; flex-direction: column; align-items: center;">
+        <div id="app" style="display: flex; flex-direction: column; align-items: center; padding: 10px;">
         </div>
         <script>
             // todo: checkboksis pilnīgiem idiotiem, kuri nevar iemācīties vairāk par 1 granātu
